// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server mutations generate register codes no permission 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: You do not have permission to call this method],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`server mutations set default world no permission 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: You do not have permission to call this method],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`server mutations with authenticated user generate register codes 1`] = `
{
  "data": {
    "generateRegisterCodes": {
      "_id": Any<String>,
      "registerCodes": ArrayContaining [
        Any<String>,
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`server mutations with authenticated user set default world 1`] = `
{
  "data": {
    "setDefaultWorld": {
      "defaultWorld": {
        "_id": Any<String>,
        "name": Any<String>,
        "wikiPage": {
          "_id": Any<String>,
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`server mutations with locked server unlock 1`] = `
{
  "data": {
    "unlockServer": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`server mutations with locked server unlock twice 1`] = `
{
  "data": {
    "unlockServer": null,
  },
  "errors": [
    [GraphQLError: Registration Error: Email already used],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
